# django-assesment

./: README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
.envs/: .gitignore
.envs/.development/: .env
.envs/.production/: .env
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
social_auth/users/: apps.py  models.py  permissions.py  urls.py  views.py
social_auth/users/api/: serializers.py  views.py
social_auth/users/migrations/: 0001_initial.py
social_auth/users/tests/: test_views.py
tests/: test_functional_tests.py
